fix #68 increase mutation coverage to at least 80%